<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="meter">meter</string>
    <string name="status">Status</string>
    <string name="calculate">Calculate</string>
</resources>